--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ language: cpp
 compiler:
   - gcc
 
-before_script:
-  - mkdir build
-  - cd build
-  - cmake ..
+#before_script:
+#  - mkdir build
+#  - cd build
+#  - cmake ..
 
-script: make
+script: ./run.sh
