--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,28 @@
+sudo: required
+dist: precise
 language: cpp
 
-compiler:
-  - g++
+matrix:
+  include:
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-4.9
+      env: COMPILER=g++-4.9
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5.4
+      env: COMPILER=g++-5.4
 
-#before_script:
-#  - mkdir build
-#  - cd build
-#  - cmake ..
-
-script: ./run.sh
+script:
+  - mkdir build
+  - cd build
+  - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
+  - ./Travisci
