--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
+            - cmake
             - g++-4.9
       env: COMPILER=g++-4.9
     - compiler: gcc
@@ -18,8 +19,9 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - g++-5.4
-      env: COMPILER=g++-5.4
+            - cmake
+            - g++-5
+      env: COMPILER=g++-5
 
 script:
   - mkdir build
