--- a/.travis.yml
+++ b/.travis.yml
@@ -10,18 +10,21 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
+            - git
             - cmake
-            - g++-4.9
-      env: COMPILER=g++-4.9
-    - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - cmake
+            - libboost-dev
+            - libboost-context-dev
+            - libboost-all-dev
+            - doxygen
             - g++-5
       env: COMPILER=g++-5
+
+before_install:
+  - git clone https://github.com/simgrid/simgrid.git
+  - cd simgrid
+  - cmake -Denable_documentation=OFF -Denable_coverage=OFF -Denable_java=OFF -Denable_model-checking=OFF -Denable_lua=OFF -Denable_compile_optimizations=OFF -Denable_smpi=OFF -Denable_smpi_MPICH3_testsuite=OFF -Denable_compile_warnings=OFF .
+  - make
+  - make install
 
 script:
   - mkdir build
