--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES main.cpp)
 add_executable(Travisci ${SOURCE_FILES})
+find_library(LIB_SIMGRID NAMES simgrid libsimgrid.so libprofiler.so.V123)
+target_link_libraries(Travisci ${LIB_SIMGRID})
