--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ matrix:
       env: COMPILER=g++-5
 
 before_install:
+  - sudo apt-get update -qq
   - sudo apt-get install -y libboost-context1.55.0
   - sudo apt-get install -y doxygen
   - git clone https://github.com/simgrid/simgrid.git
