--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y libboost-context1.55.0
+  - sudo apt-get install -y libboost-context-dev
   - sudo apt-get install -y doxygen
   - git clone https://github.com/simgrid/simgrid.git
   - cd simgrid
