--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,12 @@ matrix:
 before_install:
   - git clone https://github.com/simgrid/simgrid.git
   - cd simgrid
-  - cmake -Denable_documentation=OFF -Denable_coverage=OFF -Denable_java=OFF -Denable_model-checking=OFF -Denable_lua=OFF -Denable_compile_optimizations=OFF -Denable_smpi=OFF -Denable_smpi_MPICH3_testsuite=OFF -Denable_compile_warnings=OFF .
-  - make
-  - make install
+  - sudo cmake -Denable_documentation=OFF -Denable_coverage=OFF -Denable_java=OFF -Denable_model-checking=OFF -Denable_lua=OFF -Denable_compile_optimizations=OFF -Denable_smpi=OFF -Denable_smpi_MPICH3_testsuite=OFF -Denable_compile_warnings=OFF .
+  - sudo make
+  - sudo make install
 
 script:
   - mkdir build
   - cd build
-  - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
+  - sudo cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && sudo make
   - ./Travisci
