--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
       env: COMPILER=g++-5
 
 before_install:
-  - sudo apt-get install doxygen
+  - sudo apt-get install -y doxygen
   - git clone https://github.com/simgrid/simgrid.git
   - cd simgrid
   - sudo cmake -Denable_documentation=OFF -Denable_coverage=OFF -Denable_java=OFF -Denable_model-checking=OFF -Denable_lua=OFF -Denable_compile_optimizations=OFF -Denable_smpi=OFF -Denable_smpi_MPICH3_testsuite=OFF -Denable_compile_warnings=OFF .
