--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,6 @@ matrix:
       env: COMPILER=g++-5
 
 before_install:
-  - pip install --user cpp-coveralls
   - sudo apt-get install -y doxygen
   - git clone https://github.com/simgrid/simgrid.git
   - cd simgrid
@@ -31,7 +30,4 @@ script:
   - mkdir build
   - cd build
   - sudo cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && sudo make
-  - ./Travisci --enable-gcov
-
-  after_success:
-    - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+  - ./Travisci
