--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,12 @@ before_install:
   - sudo make install
   - cd ..
 
+install:
+  - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+  - tar xf lcov_1.11.orig.tar.gz
+  - sudo make -C lcov-1.11/ install
+  - gem install coveralls-lcov
+
 script:
   - mkdir build
   - cd build
@@ -34,4 +40,6 @@ script:
   - ./Travisci --enable-gcov
 
 after_success:
-  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+  - lcov --directory . --capture --output-file coverage.info
+  - lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info
+  - lcov --list coverage.info
