--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,7 @@ before_install:
   - cd ..
 
 install:
-  - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
-  - tar xf lcov_1.11.orig.tar.gz
-  - sudo make -C lcov-1.11/ install
-  - gem install coveralls-lcov
+  - sudo apt install -y lcov
 
 script:
   - mkdir build
