--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ set(SOURCE_FILES main.cpp)
 add_executable(Travisci ${SOURCE_FILES})
 find_library(LIB_SIMGRID NAMES simgrid libsimgrid.so libprofiler.so.V123)
 target_link_libraries(Travisci ${LIB_SIMGRID})
+target_link_libraries(Travisci yaml-cpp)
