--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ before_install:
   - git clone https://github.com/jbeder/yaml-cpp yaml-cpp
   - cd yaml-cpp
   - mkdir build
+  - cd build
   - sudo cmake -DBUILD_SHARED_LIBS=ON ..
   - sudo make
   - sudo make install
